--- a/oldindex.html
+++ b/oldindex.html
@@ -8,9 +8,12 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<title>Net.</title>
 </head>
-<body class='d-flex flex-column justify-content-center align-items-center' style='height: 100vh;'>
+<body class='d-flex flex-column justify-content-around align-items-center' style='width: 100vw; height: 100vh;'>
 
-	<canvas width="600" height="400"><p>Your browser doesn't support canvas</p></canvas>
+	<input type='button' id='reload-button' value='Reload'/>
+	<div id='container' class='position-relative'>
+	</div>
+
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
