--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body class='d-flex flex-column justify-content-center align-items-center' style='height: 100vh;'>
 
-	<canvas width="600" height="400"><p>Your browser doesn't support canvas</p></canvas>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	<script src='two.js'></script>
 	<script src='main.js'></script>
 </body>
 </html>
